--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
-    "@prisma/client": "^4.4.0",
     "@tanstack/react-query": "^4.10.0",
     "@trpc/client": "10.0.0-proxy-beta.17",
     "@trpc/next": "10.0.0-proxy-beta.17",
@@ -23,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "remark": "^14.0.2",
     "sass": "^1.55.0",
     "superjson": "1.9.1",
     "zod": "^3.18.0"
@@ -39,7 +38,6 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.4.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.8.4"
   },
