--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/server": "10.0.0-proxy-beta.17",
     "headlessui": "^0.0.0",
     "next": "12.3.1",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "18.0.0",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
