--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "10.0.0-proxy-beta.17",
     "@trpc/react": "10.0.0-proxy-beta.17",
     "@trpc/server": "10.0.0-proxy-beta.17",
+    "@types/spotify-web-api-node": "^5.0.7",
     "headlessui": "^0.0.0",
     "next": "12.3.1",
     "nodemailer": "^6.8.0",
@@ -24,6 +25,7 @@
     "react-icons": "^4.6.0",
     "remark": "^14.0.2",
     "sass": "^1.55.0",
+    "spotify-web-api-node": "^5.0.2",
     "superjson": "1.9.1",
     "zod": "^3.18.0"
   },
