--- a/.env-example
+++ b/.env-example
@@ -6,5 +6,14 @@
 
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
 
-# Prisma
-DATABASE_URL=file:./db.sqlite
+# Spotify
+SPOTIFY_ID=
+SPOTIFY_SECRET=
+SPOTIFY_ACCESS_TOKEN=
+SPOTIFY_REFRESH_TOKEN=
+
+# Emailer
+EMAILER_TO=
+EMAILER_MAIL=
+EMAILER_PASS=
+
