--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,7 @@ version: "3"
 services:
   todoapp:
     image: mrspoony/kimi-loeffel:v2
+    volumes:
+      - ./.env:/app/.env
     ports:
       - 80:3000
