--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "format": "prettier --write \"**/*.{js,ts,tsx}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
+    "format": "prettier -w ./**/*.{js,jsx,ts,tsx}",
     "start": "next start"
   },
   "dependencies": {
@@ -42,7 +43,7 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
+    "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.8.4"
